--- a/en.abbr.dict.yaml
+++ b/en.abbr.dict.yaml
@@ -35,6 +35,7 @@ Arial Narrow	arial
 Arial Rounded	arial
 Arial Unicode	arial
 BetterTouchTool	btt
+Bitwarden	bitwar
 BoldItalic	bold
 C++	cpp
 Final Cut Pro	fcp
