update: 添加一些代理软件的中英文混输

--- a/en.abbr.dict.yaml
+++ b/en.abbr.dict.yaml
@@ -111,7 +111,8 @@ Quantumult	quanx	1
 Quantumult X	quanx	2
 QuickTime Player	quick
 Sans Serif	sans
-Shadowsocks	ss
+Shadowsocks	ss	1000
+ShadowsocksR	ssr
 Sublime Text	sublime
 Surge iOS	surge
 Surge Mac	surge
