--- a/luna_pinyin.cn_en.dict.yaml
+++ b/luna_pinyin.cn_en.dict.yaml
@@ -41,6 +41,10 @@ QQ 空間	qq kong jian
 QQ 羣	qq qun
 QQ 旋風	qq xuan feng
 QQ 郵箱	qq you xiang
+Quantumult	quan	2600
+Shadowrocket	xiao huo jian
+Shadowsocks	xiao fei ji
+ShadowsocksR	xiao fei ji
 SIM 卡	sim ka
 Squirrel	shu xu guan
 T 恤	ti xu
@@ -48,6 +52,7 @@ T 恤衫	ti xu shan
 UIM 卡	uim ka
 USIM 卡	usim ka
 V2EX	vtex
+V2Ray	vtray
 Zhihu	zhi hu
 β 粒子	bei ta li zi
 β 射線	bei ta she xian
