--- a/symbols.custom.yaml
+++ b/symbols.custom.yaml
@@ -1,14 +1,11 @@
 # xianghongai@gmail.com
+# modified: i@10101.io
 # 此文档是增强输入
 #
 # / 用来触发增强输入，如： /jq 将调用二十四节气名
-# 星号直接上屏 *
-# 圆括号为英文状态下的() ，建议文字工作者的你换成中文状态下的（）
-# 顿号需要按键 \
-# 井号直接上屏 #
-# 添加常用网址
+#
 
-config_version: "0.8.1"
+config_version: "0.8.3"
 punctuator:
   full_shape:
     ' ' : { commit: '　' }
@@ -70,9 +67,9 @@ punctuator:
     ':' : { commit: ： }
     '''' : { pair: [ '‘', '’' ] }
     '"' : { pair: [ '“', '”' ] }
-    '\' : { commit: '、' }
+    '\' : [ 、, '\', ＼ ]
     '|' : [ '|', '｜', '§', '¦', '‖' ]
-    '`' : { commit:  '``' } # [ '``', '`', ·, ・, ‵, ‶, ‷, ′, ″, ‴, ⁗ ]
+    '`' : [ '``', '`', ·, ・, ‵, ‶, ‷, ′, ″, ‴]
     '~' : [ '~', ·, ～, ˜, ˷, ⸯ, ≈, ≋, ≃, ≅, ≇, ∽, ⋍, ≌, ﹏, ﹋, ﹌ ]
     '!' : { commit: ！ }
     '@' : [ '@', ©, ®, ℗ ] # "@"
@@ -81,17 +78,17 @@ punctuator:
     '$' : [ ￥, '$', '€', '£', '¥', '¢', '¤', ₩ ]
     '^' : { commit: …… }
     '&' : '&'
-    '*' : '*' # [ '*', ＊, ·, ・, ×, ※, ❂, ⁂, ☮, ☯, ☣ ]
-    '(' : '（' # "（"
-    ')' : '）' # "）"
-    '-' : '-' # "－"
-    '_' :  [ '——', '_' ]
-    '+' : '+' # "＋"
-    '=' : '='
-    '[' : ["【", "["]
-    ']' : ["】", "]"]
-    '{' : '{' # "｛"
-    '}' : '}' # "｝"
+    '*' : [ '*', ＊, ·, ・, ×, ※, ❂, ⁂, ☮, ☯, ☣ ]
+    '(' : '（'
+    ')' : '）'
+    '-' : '-'
+    '_' : ['_', ——]
+    '+' : '+'
+    '=' : [ '=', 々, 〃 ]
+    '[' : [ 「, 【, 〔, ［ ]
+    ']' : [ 」, 】, 〕, ］ ]
+    '{' : [ 『, 〖, ｛ ]
+    '}' : [ 』, 〗, ｝ ]
   symbols:
 #符號、電腦
     '/fh': [ ©, ®, ℗, ℠, ™, ℡, ℻, ☇, ☈, ☉, ☊, ☋, ☌, ☍, ☎, ☏, ☐, ☑, ☒, ☓, ☕, ☖, ☗, ⛉, ⛊, ☘, ☙, ☚, ☛, ☜, ☝, ☞, ☟, ☠, ☡, ☢, ☣, ☤, ☥, ☦, ☧, ☨, ☩, ☪, ☫, ☬, ☭, ☮, ☯, ☸, ♨, ♰, ♱, ♲, ♳, ♴, ♵, ♶, ♷, ♸, ♹, ♺, ♻, ♼, ♽, ♾, ♿, ⚆, ⚇, ⚈, ⚉, ⚐, ⚑, ⚒, ⚓, ⚔, ⚕, ⚖, ⚗, ⚘, ⚙, ⚚, ⚛, ⚜, ⚝, ⚞, ⚟, ⚠, ⚡, ⚰, ⚱, ⚲, ⚳, ⚴, ⚵, ⚶, ⚷, ⚸, ⚹, ⚺, ⚻, ⚼, ⚽, ⚾, ⚿, ⛀, ⛁, ⛂, ⛃, ⛋, ⛌, ⛍, ⛎, ⛏, ⛐, ⛑, ⛒, ⛓, ⛔, ⛕, ⛖, ⛗, ⛘, ⛙, ⛚, ⛛, ⛜, ⛝, ⛞, ⛟, ⛠, ⛡, ⛢, ⛣, ⛨, ⛩, ⛪, ⛫, ⛬, ⛭, ⛮, ⛯, ⛰, ⛱, ⛲, ⛳, ⛴, ⛵, ⛶, ⛷, ⛸, ⛹, ⛺, ⛻, ⛼, ⛽, ⛾, ⛿ ]
@@ -254,5 +251,5 @@ punctuator:
 #韓文+圈/弧
     '/hwq': [ ㉠, ㉡, ㉢, ㉣, ㉤, ㉥, ㉦, ㉧, ㉨, ㉩, ㉪, ㉫, ㉬, ㉭, ㉮, ㉯, ㉰, ㉱, ㉲, ㉳, ㉴, ㉵, ㉶, ㉷, ㉸, ㉹, ㉺, ㉻, ㉼, ㉽, ㉾, ㉿ ]
     '/hwh': [ ㈀, ㈁, ㈂, ㈃, ㈄, ㈅, ㈆, ㈇, ㈈, ㈉, ㈊, ㈋, ㈌, ㈍, ㈎, ㈏, ㈐, ㈑, ㈒, ㈓, ㈔, ㈕, ㈖, ㈗, ㈘, ㈙, ㈚, ㈛, ㈜, ㈝, ㈞ ]
+
     '/zz': ["→_→", "←_←", "O(∩_∩)O", "╮(╯▽╰)╭", "┑(￣▽ ￣)┍ ", "(≧﹏ ≦)", "(￣ε ￣) ", "(*▔＾▔*)", "O__O", "(^_^)", "(╰_╯)", "ψ(￣︶￣)ψ", "-_-||", "(╯#-_-)╯╧═╧", "◔‸◔", "= =囧~~", "•﹏•"]
-    '/wz': ["zhihu.com", "google.com", "gmail.com", "mail.qq.com", "zNote.html" ]
