--- a/en.abbr.dict.yaml
+++ b/en.abbr.dict.yaml
@@ -136,7 +136,7 @@ Thunderbird	thunder
 Thunderbolt	thunder
 Thunderbolt Bridge	thunderbolt
 Thunderbolt Ethernet	thunderbolt
-TG	t g	200
+TG	t g	1000
 TP-LINK	tp
 URL Scheme	url
 USB-A	usb	2
@@ -147,6 +147,7 @@ UTF-32	utf	1
 VirtualBox	vbox
 Virtual PC	vpc
 Visual Studio Code	vscode
+VSCode  vscode
 Xbox One	xbox
 YouTube 	ytb
 YouTube Music	ytbm
